--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   color: white;
-
   font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
@@ -20,21 +19,5 @@
   border-radius: 10px;
 }
 .list-ul::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
-}
-.container {
-  display: grid;
-  grid-template-columns: 0.6fr 1.4fr;
-  grid-template-rows: 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas: "list questions";
-}
-
-.list {
-  grid-area: list;
-}
-
-.questions {
-  grid-area: questions;
+  background: #c4c4c4;
 }
